[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/text_vars/PropertyEditor/MainEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/text_vars/TypeEditors/ValueEdit.tscn" type="PackedScene" id=2]

[node name="MainEditor" type="PanelContainer"]
margin_right = 152.0
margin_bottom = 146.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoNameRefreshTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 160.0
margin_bottom = 160.0

[node name="AddVarSection" type="MarginContainer" parent="VBox"]
margin_right = 154.0
margin_bottom = 100.0

[node name="VBox" type="VBoxContainer" parent="VBox/AddVarSection"]
margin_right = 154.0
margin_bottom = 100.0

[node name="Title" type="HBoxContainer" parent="VBox/AddVarSection/VBox"]
margin_right = 154.0
margin_bottom = 22.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="VBox/AddVarSection/VBox/Title"]
margin_left = 7.0
margin_top = 11.0
margin_right = 7.0
margin_bottom = 11.0
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBox/AddVarSection/VBox/Title"]
margin_left = 11.0
margin_right = 147.0
margin_bottom = 22.0
text = "Create New Variable"
align = 1

[node name="NameEditRow" type="HBoxContainer" parent="VBox/AddVarSection/VBox"]
margin_top = 26.0
margin_right = 154.0
margin_bottom = 48.0

[node name="NameEdit" type="LineEdit" parent="VBox/AddVarSection/VBox/NameEditRow"]
margin_right = 108.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="AutoNameButton" type="MenuButton" parent="VBox/AddVarSection/VBox/NameEditRow"]
margin_left = 112.0
margin_right = 154.0
margin_bottom = 22.0
text = "Auto"
flat = false

[node name="ValueEditRow" type="HBoxContainer" parent="VBox/AddVarSection/VBox"]
margin_top = 52.0
margin_right = 154.0
margin_bottom = 74.0

[node name="OptionButton" type="OptionButton" parent="VBox/AddVarSection/VBox/ValueEditRow"]
margin_right = 90.0
margin_bottom = 22.0
rect_min_size = Vector2( 90, 0 )
text = "String"
items = [ "String", null, false, 0, null, "Color", null, false, 1, null, "Int", null, false, 2, null ]
selected = 0

[node name="ValueEdit" parent="VBox/AddVarSection/VBox/ValueEditRow" instance=ExtResource( 2 )]
margin_left = 94.0
margin_right = 154.0
margin_bottom = 22.0

[node name="AddRow" type="HBoxContainer" parent="VBox/AddVarSection/VBox"]
margin_top = 78.0
margin_right = 154.0
margin_bottom = 100.0

[node name="AddButton" type="Button" parent="VBox/AddVarSection/VBox/AddRow"]
margin_right = 154.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Add Variable"

[node name="VarsListSection" type="VBoxContainer" parent="VBox"]
margin_top = 104.0
margin_right = 154.0
margin_bottom = 156.0

[node name="Title" type="HBoxContainer" parent="VBox/VarsListSection"]
margin_right = 154.0
margin_bottom = 22.0
alignment = 1

[node name="Icon" type="TextureRect" parent="VBox/VarsListSection/Title"]
margin_left = 44.0
margin_top = 11.0
margin_right = 44.0
margin_bottom = 11.0
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBox/VarsListSection/Title"]
margin_left = 48.0
margin_right = 110.0
margin_bottom = 22.0
text = "TextVars"
align = 1

[node name="Header" type="HBoxContainer" parent="VBox/VarsListSection"]
visible = false
margin_top = 26.0
margin_right = 140.0
margin_bottom = 48.0

[node name="Name" type="Label" parent="VBox/VarsListSection/Header"]
margin_right = 60.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Name"
align = 1

[node name="Value" type="Label" parent="VBox/VarsListSection/Header"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Value"
align = 1

[node name="Spacer" type="Button" parent="VBox/VarsListSection/Header"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 128.0
margin_right = 140.0
margin_bottom = 22.0
hint_tooltip = "Remove var"
disabled = true
button_mask = 0
flat = true

[node name="VarsList" type="VBoxContainer" parent="VBox/VarsListSection"]
margin_top = 26.0
margin_right = 154.0
margin_bottom = 26.0

[node name="NoVarsLabel" type="Label" parent="VBox/VarsListSection"]
modulate = Color( 1, 1, 1, 0.647059 )
margin_top = 30.0
margin_right = 154.0
margin_bottom = 52.0
text = "No Variables Created"
align = 1

[connection signal="timeout" from="AutoNameRefreshTimer" to="." method="_on_AutoNameRefreshTimer_timeout"]
[connection signal="text_changed" from="VBox/AddVarSection/VBox/NameEditRow/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="about_to_show" from="VBox/AddVarSection/VBox/NameEditRow/AutoNameButton" to="." method="_on_AutoNameButton_about_to_show"]
[connection signal="item_selected" from="VBox/AddVarSection/VBox/ValueEditRow/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="text_changed" from="VBox/AddVarSection/VBox/ValueEditRow/ValueEdit/StringEdit" to="VBox/AddVarSection/VBox/ValueEditRow/ValueEdit/StringEdit" method="_on_StringEdit_text_changed"]
[connection signal="pressed" from="VBox/AddVarSection/VBox/AddRow/AddButton" to="." method="_on_AddButton_pressed"]
